--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
             </div>
         </li>
     </ul>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66900057-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-66900057-1');
+    </script>
+
     <!-- <div class="footer">Style adapted from a codepen written by <a href="https://codepen.io/chrisgrabinski/pen/gpqtc" target="_blank">Christopher Grabiński</a> | Hosted in <a href="https://ipfs.io" target="_blank">IPFS</a> | 2018</div> -->
 </body>
 
