--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" charset="utf-8" src="js/style.js"></script>
 </head>
 
-<body onresize="setStyle()" onload="setStyle()">
+<body onresize="setStyle()" onload="setStyle(), getCurrentIPFSHash('hogan.io')">
+  <div class="content">
     <ul class="masonry-list">
         <li class="tile-case">
             <div class="subGroup">
@@ -133,6 +134,8 @@
             </div>
         </li>
     </ul>
+  </div>
+    <div class="footer">Style adapted from a codepen written by <a href="https://codepen.io/chrisgrabinski/pen/gpqtc" target="_blank">Christopher Grabiński</a> | Hosted in <a href="https://ipfs.io" target="_blank">IPFS</a> | Current Hash: <span id="currentHash">unknown</span> | 2018</div>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66900057-1"></script>
     <script>
@@ -143,7 +146,7 @@
       gtag('config', 'UA-66900057-1');
     </script>
 
-    <!-- <div class="footer">Style adapted from a codepen written by <a href="https://codepen.io/chrisgrabinski/pen/gpqtc" target="_blank">Christopher Grabiński</a> | Hosted in <a href="https://ipfs.io" target="_blank">IPFS</a> | 2018</div> -->
+    
 </body>
 
 </html>
